--- a/assets/index.html
+++ b/assets/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="containerfluid">
+    <header class="container-fluid">
         <div class="row">
             <a href="index.html">
                 <div class="col-md-4 logo">
@@ -19,17 +19,17 @@
             <div class="col-md-8">
                 <div class="row bg-color-name-title">
                     <div class="heading">
-                        <h1 class="name">Martin G. Russell</h1>
-                        <h2 class="title">Full Stack Developer</h2>
+                        <h1 class="name">Clare Beglan</h1>
+                        <h2 class="title">Mortgage Advisor</h2>
                     </div>
                 </div>
                 <div class="row">
                     <ul id="nav" class="list-inline clearfix">
                         <li class="col-xs-6 col-sm-3 ui-menu-color-home menuitem">
-                            <a href='#' class="hvr-sweep-to-bottom"><i class="fa fa-home" aria hidden="true"></i><span>Home</span></a>
+                            <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria hidden="true"></i><span>Home</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-resume menuitem">
-                            <a href='#' class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria hidden="true"></i><span>Resume</span></a>
+                            <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria hidden="true"></i><span>Resume</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-contact menuitem">
                             <a href='#' class="hvr-sweep-to-bottom"><i class="fa fa-commenting-o" aria hidden="true"></i><span>Contact</span></a>
@@ -44,18 +44,93 @@
     </header>
     <section class="container-fluid">
         <div class="row row-table">
+            <div class="col-xs-12 col-sm-12 col-md-4 bg-color-personal-info section-column">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h3 class="section-heading uppercase">Personal Info</h3>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Name:</p>
+                    </div>
+                    <div class="value">
+                        <p>Clare Beglan</p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Address:</p>
+                    </div>
+                    <div class="value">
+                        <p>17 Riverdale, Catskills, NY USA</p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Phone:</p>
+                    </div>
+                    <div class="value">
+                        <p>555 785 1037225</p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
+                    <div class="key">
+                        <p class="uppercase">Email:</p>
+                    </div>
+                    <div class="value">
+                        <p>clare.beglan@hansaw.com</p>
+                    </div>
+                </div>
+            </div>
             <div class="col-xs-12 col-sm-12 col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col-md-12">
                         <h3 class="section-heading uppercase">About Me</h3>
                     </div>
-
+                </div>
+                <div class="row">
+                    <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-xs-2 col-sm-2 col-md-2">
+                                <i class="three-reasons-icons fa fa-question" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-xs-10 col-sm-10">
+                                <h4 class="three-reasons-heading uppercase">What do I do?</h4>
+                                <p>
+                                    I am a skilled Full Stack Developer with a wealth of experience in life and professional environments.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-xs-2 col-sm-2 col-md-2">
+                                <i class="three-reasons-icons fa fa-thumbs-up" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-xs-10 col-sm-10">
+                                <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
+                                <p>
+                                    I follow form as well as function. I know that the aesthetics of effective design combined with application speed, security and reliability combine to create a good user experience.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
+                        <div class="row">
+                            <div class="col-xs-2 col-sm-2 col-md-2">
+                                <i class="three-reasons-icons fa fa-bolt" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-xs-10 col-sm-10">
+                                <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
+                                <p>I am a skilled Full Stack Developer with a wealth of experience in life and professional environments.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-
     </section>
-
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
