--- a/assets/index.html
+++ b/assets/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-
+    <meta name="viewport" content="width=device-width, initial-scale-1">
 </head>
 
 <body>
@@ -32,10 +32,10 @@
                             <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria hidden="true"></i><span>Resume</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-contact menuitem">
-                            <a href='#' class="hvr-sweep-to-bottom"><i class="fa fa-commenting-o" aria hidden="true"></i><span>Contact</span></a>
+                            <a href='contact.html' class="hvr-sweep-to-bottom"><i class="fa fa-commenting-o" aria hidden="true"></i><span>Contact</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-download menuitem">
-                            <a href='#' class="hvr-sweep-to-bottom"><i class="fa fa-download" aria hidden="true"></i><span>Download CV</span></a>
+                            <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria hidden="true"></i><span>Download CV</span></a>
                         </li>
                     </ul>
                 </div>
@@ -128,8 +128,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
     </section>
     <footer class="container-fluid">
         <div id="footer-details" class="row">
@@ -143,10 +141,10 @@
                 <h5 class="uppercase general-sub">Download my CV</h5>
                 <p class="inline-block">
                     Need a printable version of my CV?
-                    <a href="#" class="cv-pdf"><i class="fa fa-download" aria hidden="true"></i></a>
+                    <a href="assets/CV/sample-cv.pdf" target="_blank" class="cv-pdf"><i class="fa fa-download" aria hidden="true"></i></a>
                 </p>
             </div>
-            <div class="col-sm-4">
+            <div class="">
                 <h5 class="uppercase general-sub">MySocial</h5>
                 <ul class="list-inline social-links">
                     <li><a target="_blank" href="#"><i class="fa fa-facebook"></i></a></li>
@@ -158,5 +156,4 @@
         </div>
     </footer>
 </body>
-
 </html>
