--- a/assets/resume.html
+++ b/assets/resume.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-
+    <meta name="viewport" content="width=device-width, initial-scale-1">
 </head>
 
 <body>
@@ -32,10 +32,10 @@
                             <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria hidden="true"></i><span>Resume</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-contact menuitem">
-                            <a href='#' class="hvr-sweep-to-bottom"><i class="fa fa-commenting-o" aria hidden="true"></i><span>Contact</span></a>
+                            <a href='contact.html' class="hvr-sweep-to-bottom"><i class="fa fa-commenting-o" aria hidden="true"></i><span>Contact</span></a>
                         </li>
                         <li class="col-xs-6 col-sm-3 ui-menu-color-download menuitem">
-                            <a href='#' class="hvr-sweep-to-bottom"><i class="fa fa-download" aria hidden="true"></i><span>Download CV</span></a>
+                            <a href="/assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria hidden="true"></i><span>Download CV</span></a>
                         </li>
                     </ul>
                 </div>
@@ -55,7 +55,7 @@
                         <h4>National College of Art and Design (NCAD)</h4>
                         <p>Sculptor in residence</p>
                     </div>
-                    <div class="timeline-item" dates="04/2004 - 06/2008">
+                    <div class="timeline-item" dates="04/2004 - 06/2008">git
                         <h4>Fisher and Diaz Funeral Home</h4>
                         <p>Junior Embalmer</p>
                     </div>
@@ -74,10 +74,6 @@
                     <div class="col-md-12">
                         <h3 class="section-heading uppercase">My Skills</h3>
                     </div>
-                </div>
-                <div class="timeline-item" dates="02/1998 - 04/2004">
-                    <h4>National College of Art and Design</h4>
-                    <p>Sculptor in residence</p>
                 </div>
                 <div class="row">
                     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-4 col-md-6">
